tests/baselines/reference/requireOfAnEmptyFile1.errors.txt
requireOfAnEmptyFile1_a.ts(1,21): error TS2306: File 'requireOfAnEmptyFile1_b.ts' is not a module.


==== requireOfAnEmptyFile1_a.ts (1 errors) ====
    import fs = require('./requireOfAnEmptyFile1_b');
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2306: File 'requireOfAnEmptyFile1_b.ts' is not a module.
    
==== requireOfAnEmptyFile1_b.ts (0 errors) ====
    